<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/favorite"/>

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"/>

    <item
        android:id="@+id/rankingFragment"
        android:icon="@drawable/ic_android_black_24dp"
        android:title="@string/ranking"/>
    <item
        android:id="@+id/otherFragment"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/measure_other"/>
</menu>